[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qcl"                        # اسم پکیج در PyPI
version = "0.1.0"                   # ورژن پکیج
description = "The QuearaContestLib for cheating in Queara coding race"
readme = "README.md"
authors = [
  { name="Ali DianatSeresht" },
  { name="Arad Asgary" },
  { name="Puya Taati" }
]
requires-python = ">=3.7"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/USERNAME/qcl"
"Issues" = "https://github.com/USERNAME/qcl/issues"
